--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -26,6 +26,7 @@ main {
 .scroll-content {
   //pointer-events: none;
 }
+
 .bus {
   color: red;
 }
@@ -2270,16 +2271,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
 
     li {
       display: flex;
 
-      &:not(:first-child) {
+      &:not(:last-child) {
         display: flex;
         align-items: center;
         justify-content: flex-start;
 
-        &::before {
+        &::after {
           content: '/';
           font-style: normal;
           font-weight: 500;
@@ -3626,6 +3628,7 @@ body.page-template-contacts, body.page-template-partners {
   background: #FFFFFF;
   border: 4px solid #000000;
 
+
   .img {
     width: 100%;
     height: 100%;
@@ -3953,20 +3956,25 @@ body.page-template-contacts, body.page-template-partners {
       span {
         perspective: 1000px;
       }
+
       span {
         &:nth-child(1) {
           transform-origin: 50% 100% 0px;
+
           span {
             transform: rotateX(0);
             animation: easyoutelastic 8s infinite;
           }
         }
+
         &:nth-child(2) {
           color: $pink;
         }
+
         &:nth-child(3) {
           perspective: none;
           perspective-origin: 50% 50%;
+
           span {
             transform: rotate(0deg);
 
@@ -4034,6 +4042,148 @@ body.page-template-contacts, body.page-template-partners {
   }
   100% {
     transform: rotateX(0);
+  }
+}
+
+//
+
+.our-team-vid {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background: $main-color;
+
+  .video {
+    width: 100%;
+    overflow: hidden;
+    height: 30.0000vw;
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.our-team__cont {
+  width: 100%;
+  padding: 8.3333vw 0 10.4167vw;
+
+  .service-block__head {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.our-team__logos {
+  width: 100%;
+  margin-top: -2.0833vw;
+  margin-bottom: 0;
+
+  .container {
+    gap: 1.0417vw;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+
+    flex-wrap: wrap;
+  }
+}
+
+.logos-team {
+  background: #FFFDFD;
+  border: 1px solid #DDDDDD;
+
+  width: calc(25% - (3.1250vw / 4));
+  height: 12.5521vw;
+  box-sizing: border-box;
+  padding: 2.6042vw 3.1250vw;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+.mini-team-block {
+  width: 100%;
+  margin-top: 2.0833vw;
+
+  .txt {
+    width: 100%;
+    display: flex;
+    padding: 7.2917vw 14.5833vw 0;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 3.6458vw;
+    position: relative;
+    &::before {
+      width: 100%;
+      height: 13.1771vw;
+      border-left: 2.0833vw solid $main-color;
+      border-top:2.0833vw solid $main-color;
+      display: inline-block;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .title {
+      width: 100%;
+      margin-bottom: 2.8646vw;
+      padding-right: 7.2917vw;
+
+      font-style: normal;
+      font-weight: 800;
+      font-size: 2.5000vw;
+      line-height: 3.2292vw;
+      text-transform: lowercase;
+      color: #000000;
+    }
+
+    p {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.2500vw;
+      line-height: 1.5625vw;
+      text-transform: lowercase;
+      color: #000000;
+      width: 100%;
+      margin-bottom: 1.0417vw;
+      padding-left: 7.2917vw;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .img {
+    width: 100%;
+    height: 26.4063vw;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .service-table__single {
+    min-height: 27.4479vw;
   }
 }
 
