--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -155,6 +155,13 @@ body {
       content: '';
       margin-right: 0.6250vw;
       background: url("../img/arr-r-1.svg") no-repeat center / 100%;
+      transition: all 0.3s ease;
+    }
+
+    &:hover {
+      &::before {
+        transform: translate(30%, 0);
+      }
     }
   }
 }
@@ -2109,6 +2116,10 @@ body {
   color: #000000;
   display: inline-block;
   margin-bottom: 3.1250vw;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .service-count {
@@ -2179,7 +2190,7 @@ body {
     content: '';
     background: url("../img/arr-r-1.svg") no-repeat center / 100%;
     margin-top: 0.3125vw;
-    transition: filter 0.3s ease;
+    transition: all 0.3s ease;
   }
 
   &::before {
@@ -2197,6 +2208,14 @@ body {
 
     &::before, &::after {
       filter: invert(1);
+    }
+
+    &::before {
+      transform: translate(50%, 0);
+    }
+
+    &::after {
+      transform: translate(-50%, 0) rotate(180deg);
     }
   }
 }
@@ -4127,17 +4146,19 @@ body.page-template-contacts, body.page-template-partners {
     justify-content: flex-start;
     margin-bottom: 3.6458vw;
     position: relative;
+
     &::before {
       width: 100%;
       height: 13.1771vw;
       border-left: 2.0833vw solid $main-color;
-      border-top:2.0833vw solid $main-color;
+      border-top: 2.0833vw solid $main-color;
       display: inline-block;
       content: '';
       position: absolute;
       top: 0;
       left: 0;
     }
+
     .title {
       width: 100%;
       margin-bottom: 2.8646vw;
@@ -4184,6 +4205,226 @@ body.page-template-contacts, body.page-template-partners {
 @media screen and (min-width: 768px) {
   .service-table__single {
     min-height: 27.4479vw;
+  }
+}
+
+//
+
+.textual {
+  width: 100%;
+  margin-bottom: 4.6875vw;
+
+  .container {
+    max-width: 59.3750vw;
+  }
+
+  h2 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.5000vw;
+    line-height: 3.2292vw;
+    text-transform: lowercase;
+    color: #000000;
+    margin-bottom: 1.6667vw;
+  }
+
+  h3 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.6667vw;
+    line-height: 2.1354vw;
+    color: #000000;
+    margin-bottom: 1.3021vw;
+  }
+
+  p {
+    margin-bottom: 1.3021vw;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  p, li, a {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.2500vw;
+    line-height: 1.5625vw;
+    color: #000000;
+
+    strong {
+      font-weight: 800;
+    }
+  }
+
+  a {
+    color: $main-color;
+    text-decoration: underline;
+  }
+
+  img {
+    margin: 1.0417vw 0;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+
+    + h3 {
+      margin-top: 2.6042vw;
+    }
+
+    &.alignRight {
+      float: right;
+      margin-left: 1.5625vw;
+      margin-bottom: 2.6042vw;
+      max-width: 50%;
+    }
+
+    &.alignLeft {
+      float: left;
+      margin-right: 1.5625vw;
+      margin-bottom: 2.6042vw;
+      max-width: 50%;
+    }
+
+    &.alignCenter {
+
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+
+    }
+  }
+
+  ul, ol {
+    margin-bottom: 2.6042vw;
+
+    li {
+      padding-left: 4.8958vw;
+      position: relative;
+      padding-top: 1.6667vw;
+      padding-bottom: 1.6667vw;
+
+      &::before {
+        width: 2.6042vw;
+        height: 2.6042vw;
+        background: $main-color;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        content: '';
+        transform: translate(0, -50%);
+
+        font-style: normal;
+        font-weight: 800;
+        font-size: 1.2500vw;
+        line-height: 1.6146vw;
+        color: #000000;
+      }
+
+    }
+  }
+
+  ul {
+    li {
+      &::before {
+        background: url("../img/arr-r-1.svg") no-repeat center / 70%, $main-color;
+      }
+    }
+  }
+
+  ol {
+
+    counter-reset: my-awesome-counter6;
+
+    li {
+      counter-increment: my-awesome-counter6;
+
+      &::before {
+        content: counter(my-awesome-counter6);
+      }
+    }
+  }
+}
+
+//
+body .carousel__button {
+  width:3.1250vw;
+  svg {
+    width: 1.5625vw;
+    height: 1.5625vw;
+  }
+  &.fancybox__button--slideshow, &.fancybox__button--zoom, &.fancybox__button--fullscreen, &.fancybox__button--thumbs {
+    display: none !important;
+  }
+}
+
+.fancybox__thumbs .carousel__slide .fancybox__thumb::after {
+  border-color: $main-color !important;
+}
+
+.works-list-fancy {
+  width: 100%;
+  gap: 1.0417vw;
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  .fancy-link {
+    width: calc(50% - 0.5208vw);
+    height: 25.0000vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    cursor: pointer;
+
+    img {
+      width: 100%;
+
+      height: 100%;
+      object-fit: cover;
+    }
+
+    &.vid {
+      position: relative;
+
+      &::after {
+        width: 8.9063vw;
+        height: 9.9479vw;
+        display: inline-block;
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: url("../img/play-ic.svg") no-repeat center / 100%;
+        filter: brightness(0) invert(1);
+        transition: transform 0.3s ease;
+        z-index: 2;
+      }
+      &:hover {
+        &::after {
+          transform: translate(-50%, -50%) scale(0.7);
+        }
+      }
+
+      &::before {
+        background: rgba(20, 20, 20, 0.6);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+        content: '';
+
+        z-index: 1;
+      }
+    }
   }
 }
 
