--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,5 +1,58 @@
 @media screen and (max-width: 767px) {
   //
+  .load-more:hover::before {
+    transform: translate(20%, 0);
+  }
+  .load-more:hover::after {
+    transform: translate(-20%, 0) rotate(180deg);
+  }
+  .textual .container {
+    max-width: 100%;
+
+
+  }
+  .textual {
+    margin-bottom: 18.6667vw;
+    h2 {
+      font-size: 6.4000vw;
+      line-height: 1.2;
+    }
+
+    h3, h4, h5, h6 {
+      font-size: 4.5333vw;
+      line-height: 1.2;
+      margin-bottom: 5.3333vw;
+    }
+
+    p, li, a {
+      font-size: 4.0000vw;
+      line-height: 1.2;
+    }
+
+    ul, ol {
+      margin: 8.0000vw 0;
+
+      li {
+        padding-left: 13.3333vw;
+        padding-top: 3.4667vw;
+        padding-bottom: 3.4667vw;
+
+        &::before {
+          width:8.0000vw;
+          height: 8.0000vw;
+          font-size: 5.3333vw;
+        }
+      }
+    }
+
+    img {
+      width: 100% !important;
+      max-width: 100% !important;
+      height: auto !important;
+      margin: 8.0000vw 0 !important;
+    }
+  }
+  //
   .our-team__logos {
     margin-bottom: 6.6667vw;
   }
@@ -29,13 +82,15 @@
       padding-left: 5.3333vw;
       padding-top: 5.3333vw;
       padding-right: 5.3333vw;
+
       .title {
         font-size: 4.5333vw;
         line-height: 1.2;
         padding-right: 2.6667vw;
       }
+
       p {
-        padding-left:2.6667vw;
+        padding-left: 2.6667vw;
 
         font-size: 3.4667vw;
         line-height: 1.2;
@@ -45,14 +100,17 @@
   //
   .block-404 {
     padding: 8.0000vw 0;
+
     .txt {
       width: 100%;
+
       span {
         font-size: 21.8667vw;
         line-height: 1.2;
         margin-bottom: 4.0000vw;
         display: flex;
       }
+
       > p {
         font-size: 3.4667vw;
         line-height: 1.2;
