--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -3069,6 +3069,12 @@ body.page-template-contacts, body.page-template-partners {
     background: $grey;
   }
 }
+.textual {
+  ~ .random-links {
+    padding-bottom: 5.2083vw;
+    background: $grey;
+  }
+}
 
 .case-hero__cont {
   width: 100%;
@@ -4372,7 +4378,9 @@ body .carousel__button {
   align-items: stretch;
   justify-content: flex-start;
   flex-wrap: wrap;
-
+  ul {
+    display: none !important;
+  }
   .fancy-link {
     width: calc(50% - 0.5208vw);
     height: 25.0000vw;
@@ -4381,49 +4389,50 @@ body .carousel__button {
     justify-content: center;
     overflow: hidden;
     cursor: pointer;
+    position: relative;
+
+    &::before {
+      background: rgba(20, 20, 20, 0.6);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: inline-block;
+      content: '';
+
+      z-index: 1;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
 
     img {
       width: 100%;
 
       height: 100%;
       object-fit: cover;
+      transition: transform 1.4s linear;
+    }
+    &:hover {
+      img {
+        transform: scale(1.2);
+      }
+      &::before {
+        opacity: 1;
+      }
     }
 
     &.vid {
       position: relative;
 
-      &::after {
-        width: 8.9063vw;
-        height: 9.9479vw;
-        display: inline-block;
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: url("../img/play-ic.svg") no-repeat center / 100%;
-        filter: brightness(0) invert(1);
-        transition: transform 0.3s ease;
-        z-index: 2;
-      }
+
       &:hover {
         &::after {
           transform: translate(-50%, -50%) scale(0.7);
         }
       }
 
-      &::before {
-        background: rgba(20, 20, 20, 0.6);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        content: '';
 
-        z-index: 1;
-      }
     }
   }
 }
