--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -3554,6 +3554,7 @@ body.page-template-contacts, body.page-template-partners {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .service-block {
