--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -3744,9 +3744,10 @@ body.page-template-contacts, body.page-template-partners {
       width: 100%;
       max-width: 50.0000vw;
       margin-right: 1.0417vw;
-      word-break: break-all;
+      //word-break: break-all;
     }
   }
+
 
   .service-count {
     align-items: flex-start;
